--- a/about.html
+++ b/about.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Universidade</title>
 </head>
-<body background="../img/fundo2.png">
+<body background="fundo2.png">
     <table border="0" width="900" align="center">
         <tr>
             <td height="89">
-                <img src="../img/logo.png" alt="Logo da Universidade">
+                <img src="logo.png" alt="Logo da Universidade">
             </td>
             <td align="right">
                 <a href="index.html">Home</a> |
