--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Universidade</title>
 </head>
-<body background="../img/fundo.png">
+<body background="fundo.png">
     <table border="0" width="900" align="center">
         <tr>
             <td height="89">
-                <img src="../img/logo.png" alt="Logo da Universidade">
+                <img src="logo.png" alt="Logo da Universidade">
             </td>
             <td align="right">
                 <a href="#">Home</a> |
@@ -20,7 +20,7 @@
         </tr>
         <tr>
             <td colspan="2">
-                <img src="../img/capa.png" alt="Capa da Universidade">
+                <img src="capa.png" alt="Capa da Universidade">
             </td>            
         </tr>   
         <tr>
