--- a/contato.html
+++ b/contato.html
@@ -9,7 +9,7 @@
     <table border="0" width="900" align="center">
         <tr>
             <td height="89">
-                <img src="../img/logo.png" alt="Logo da Universidade">
+                <img src="logo.png" alt="Logo da Universidade">
             </td>
             <td align="right">
                 <a href="index.html">Home</a> |
